packages/macros/tests/compile_fail/missing_namespace.stderr
error: Missing field `namespace`
 --> tests/compile_fail/missing_namespace.rs:4:48
  |
4 | #[derive(Debug, Clone, Serialize, Deserialize, Settings)]
  |                                                ^^^^^^^^
  |
  = note: this error originates in the derive macro `Settings` (in Nightly builds, run with -Z macro-backtrace for more info)
